# telegram-client-api

./: .editorconfig  .env.local  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
telegram_client_api/: __init__.py  app.py  client.py  main.py  telegram.py
tests/: test_telegram_client_api.py
