[tool.poetry]
name = "telegram-client-api"
version = "0.1.0"
description = "App client telegram api"
authors = ["Guilherme Lima <guilhermem.lima@outlook.com>"]

[tool.poetry.scripts]
start = "telegram_client_api.main:start"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.6"
Telethon = "^1.24.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.32.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
